styles/common-template.css
/* ... */
/* Chinese font for prop labels */
.propLabel:lang(zh) {
  font-family: "Li Sung", MingLiu; font-size:1em;
}

.relative { position: relative }	  
.pointer { cursor: pointer; }
.dragable, .move { cursor: move; }

img.fade {
   opacity:       0.6;
}

#fts td {padding-bottom: 1.2em;}
#fts {font-size: small;}

#user td {   font-size: 12px; }

#user a { color: &[SecondaryColorA_3_brighter];}
#user span { color: &[SecondaryColorA_3_brighter];; font-weight: bold;}
#user .untranslated { color: #FFFFFF; background-color: #FF2222 }

#dataEntry td { font-size: 12px; }
#dataEntry table { border-collapse: collapse; }
#siteResourceList td, #resourceList td, #div_Info td, .widget td, #mkresource td { height: 30px; font-size: 12px; }
#siteResourceList #blog td, #siteResourceList .panel_block td { height: auto; }

.rounded_rect_tbl #siteResourceList { text-align: center; } /* align menu items */
.rounded_rect_tbl #menu{ margin: 0 auto; }
#siteResourceList #front {background-color: &[BackgroundColor];}
#siteResourceList #front .label {font-size:12px; }

#resourceList td.top {height: 0px; }

div .href {display: inline;}

.hideImg * { display: inline; padding-right: 0.5em; border: none; }
.hideImg table, .hideImg img, .hideImg object, .hideImg embed, .hideImg .swf, .hideImg .flv { display: none; }
@-moz-document url-prefix() { .hideImg table { display: table; } .hideImg table td { float: left; } }

.displayInline, .displayIn4lines { max-width: 750px; word-wrap: break-word; overflow:hidden; width: 100%; height: 1em; line-height: 0.9em; text-align:justify; }
.displayInline, .displayInline * { 
  font-size: 1em !important; 
/*  font-weight:normal !important; */ 
/*  margin:0 !important;  */
}
.displayIn4lines, .displayIn4lines * { font-size: 14px !important; line-height: 16px; height: 64px; /* 64 == 16 * 4 */ text-align: left; font-weight:normal !important; margin:0 !important; padding: 2px;} /* good with 12px font in full view */

.mItems {
  text-align:center;
  vertical-align: top;
}

.tabs, .tabs_current {
  height: 33px;
  cursor: pointer;
  display: inline;
  vertical-align:bottom;
}
.tabs_current .left, .right {
   width:12px;
}

.tabs img {
  border: 0;
}

.tabs a:link, .tabs a:visited {
  font-size: 8pt;
  font-weight: normal;
  text-decoration: none;
}

.tabs .left, .tabs .right {
  width:12px;
}


/******************** awesome buttons ****************************/
/* set an awesome color for the buttons, feel free to add new colors like an input[type=button].green or input[type=button].secondary */
input[type=button], input[type=submit], .button {
  background-color: &[PrimaryColor_4];;
  color: &[PrimaryColor_3];;
}
div.button { font-size: 15px; color: &[Label];; padding: 3px 10px;}

/* the awesome size gets set here. Feel Free to add new sizes, like input[type=button].small or .small.large   */
input[type=button], input[type=submit], .button, a.button, .tags .item { white-space: nowrap; font-size: 15px; color: &[Label];; -webkit-tap-highlight-color: rgba(0,0,0,0); }
span.font_button { vertical-align: middle; font-weight: bold;  font-size: 15px; }
input[type=button], input[type=submit] { padding: 5px 10px; }
a.button  { padding: 3px 10px; } /* a.button:active - anchor requires smaller padding than type=button */
/*input[type=button]:active, input[type=submit]:active, .button:active	{ padding: 6px 10px 5px; }*/

/* Touch the rest at your own risk. */
input[type=button], input[type=submit], .button, .tags .item { 
  border: 0; 
  cursor: pointer; 
  font-style: normal; 
  font-weight: bold; 
  line-height: 30px;
  position: relative; 
  text-align: center;
  text-decoration: none; 
  
  /* vertical margin is the opposite of button's awesomeness */
  margin-top: 0;
  margin-bottom: 0;
  
  /* not all browser support these, but who cares? */

  /* text-shadow:0 0 2px rgba(0, 0, 0, 0.4); */

          border-radius: 5px; 
     -moz-border-radius: 5px; 
  -webkit-border-radius: 5px; 
          box-shadow: 0 1px 3px rgba(0,0,0,0.5); 
     -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5); 
  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
  
  background-color: &[PrimaryColor_1];;
  background-image: -moz-linear-gradient(top center, &[PrimaryColor_4];, &[PrimaryColor_1];);
  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(&[PrimaryColor_4];), to(&[PrimaryColor_1];));
	background-image: -o-linear-gradient(&[PrimaryColor_4];, &[PrimaryColor_1];);
  #filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=&[PrimaryColor_4];,endColorstr=&[PrimaryColor_1];);
  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=&[PrimaryColor_4];,endColorstr=&[PrimaryColor_1];)";

  border: 1px solid &[PrimaryColor_1]; !important;
  border: 1px solid &[ToolbarColor];;
  
  /* cross browser inline block hack; see http://blog.mozilla.com/webdev/2009/02/20/cross-browser-inline-block/ */
  display: -moz-inline-stack;
  display: inline-block;
  vertical-align: middle;
  *display: inline;
  position: relative;
  
  /* IE luv */
  zoom: 1;
  
  /*disable text selection (Firefox only)*/
  -moz-user-select: none;
}
/* hide selection background color */
input[type=button]::selection, input[type=submit]::selection, .button::selection {
	background: transparent;
}

input[type=button], input[type=submit], .button {
  outline: 0; /*remove dotted line, works for links only*/
}
input[type=button]::-moz-focus-inner, input[type=submit]::-moz-focus-inner, .button::-moz-focus-inner {
  border: none; /* remove dotted lines for buttons */
}
/* ... */

